# pkg/routes/routes.go
@@ -18,4 +18,33 @@ func RegisterAnimalRoutes(rg *gin.RouterGroup, client *mongo.Client, dbName stri
         g.PUT("/:id", ctrl.UpdateAnimal)
         g.DELETE("/:id", ctrl.DeleteAnimal)
     }
+
+    // Categories
+    cat := controllers.NewCategoryController(client, dbName)
+    cg := rg.Group("/categories")
+    {
+        cg.POST("", cat.CreateCategory)
+        cg.GET("", cat.ListCategories)
+        cg.GET("/:id", cat.GetCategory)
+        cg.PUT("/:id", cat.UpdateCategory)
+        cg.DELETE("/:id", cat.DeleteCategory)
+    }
+
+    // Species
+    sp := controllers.NewSpeciesController(client, dbName)
+    sg := rg.Group("/species")
+    {
+        sg.POST("", sp.CreateSpecies)
+        sg.GET("", sp.ListSpecies)
+        sg.GET("/:id", sp.GetSpecies)
+        sg.PUT("/:id", sp.UpdateSpecies)
+        sg.DELETE("/:id", sp.DeleteSpecies)
+    }
+
+    // Maintenance
+    mt := controllers.NewMaintenanceController(client, dbName)
+    mg := rg.Group("/maintenance")
+    {
+        mg.POST("/backfill-timestamps", mt.BackfillTimestamps)
+    }
 }
